--- a/Dimot_Bekalot/app/src/main/res/layout/activity_institute_data.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_institute_data.xml
@@ -11,6 +11,7 @@
     <include android:id="@+id/include" layout="@layout/toolbar" />
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
@@ -20,7 +21,6 @@
 
     </TextView>
 
-
     <TableLayout
         android:background="@color/white"
         android:layout_marginTop="70dp"
@@ -29,31 +29,7 @@
 
         <TableRow>
             <TextView
-                android:id="@+id/input_name_contact"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="שם איש קשר"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:gravity="center"/>
-
-        </TableRow>
-
-<!--    space between 2 rows    -->
-        <TableRow>
-            <TextView/>
-        </TableRow>
-
-
-        <TableRow>
-            <TextView
-                android:id="@+id/input_email"
+                android:id="@+id/data_email"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -74,10 +50,13 @@
         <TableRow>
             <TextView/>
         </TableRow>
+        <TableRow>
+            <TextView/>
+        </TableRow>
 
         <TableRow>
             <TextView
-                android:id="@+id/input_phone_number"
+                android:id="@+id/data_phone_number"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -99,10 +78,13 @@
         <TableRow>
             <TextView/>
         </TableRow>
+        <TableRow>
+            <TextView/>
+        </TableRow>
 
         <TableRow>
             <TextView
-                android:id="@+id/input_password"
+                android:id="@+id/data_password"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -123,10 +105,12 @@
         <TableRow>
             <TextView/>
         </TableRow>
-
+        <TableRow>
+            <TextView/>
+        </TableRow>
         <TableRow>
             <TextView
-                android:id="@+id/input_name_institute"
+                    android:id="@+id/data_name_institute"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -143,6 +127,9 @@
 
         </TableRow>
 
+        <TableRow>
+            <TextView/>
+        </TableRow>
         <!--    space between 2 rows    -->
         <TableRow>
             <TextView
@@ -153,7 +140,7 @@
 
         <TableRow>
             <TextView
-                android:id="@+id/input_id"
+                android:id="@+id/data_id"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -175,11 +162,14 @@
         <TableRow>
             <TextView/>
         </TableRow>
+        <TableRow>
+            <TextView/>
+        </TableRow>
 
 
         <TableRow>
             <TextView
-                android:id="@+id/input_location"
+                android:id="@+id/data_location"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -199,6 +189,18 @@
 
 
     </TableLayout>
+
+    <TextView
+        android:id="@+id/pa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
+        android:text="כדי לשנות פרטים אנא ליחצו עליהם"
+        android:textSize="25dp">
+
+    </TextView>
+
 
 
 
