--- a/Dimot_Bekalot/app/src/main/res/layout/activity_watching_queue.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_watching_queue.xml
@@ -22,18 +22,19 @@
 
     <TextView
         android:id="@+id/watching_treatment_type"
-        android:layout_width="109dp"
+        android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_marginTop="32dp"
-        android:layout_marginLeft="290dp"
+        android:layout_marginLeft="283dp"
         android:text="סוג טיפול"
+        android:textStyle="bold"
         android:textSize="20sp" />
 
     <Spinner
         android:id="@+id/watching_chooseTreatmentType"
         android:layout_width="209dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="185dp" />
+        android:layout_marginLeft="160dp" />
 
     <LinearLayout
 
