--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include2"
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar_entry_activities" />
 
     <TextView
         android:id="@+id/forget_password_main_text"
