--- a/Dimot_Bekalot/app/src/main/res/layout/activity_add_queue.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_add_queue.xml
@@ -5,11 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pale_blue_background"
+    android:background="@drawable/gray_background"
     tools:context=".InstituteActivity.AddQueueActivity">
 
-
-    <include android:id="@+id/include" layout="@layout/toolbar" />
+    <include android:id="@+id/include" layout="@layout/toolbar_institute" />
 
     <TextView
         android:id="@+id/title"
