--- a/Dimot_Bekalot/app/src/main/res/layout/activity_institute_main.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_institute_main.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pale_blue_background"
+    android:background="@drawable/gray_background"
     tools:context=".InstituteActivity.InstituteMain">
 
-    <include android:id="@+id/include" layout="@layout/toolbar" />
+    <include android:id="@+id/include" layout="@layout/toolbar_institute" />
 
 
     <TextView
@@ -43,11 +43,12 @@
         android:id="@+id/watch_queue"
         android:layout_width="160dp"
         android:layout_height="90dp"
+        android:background="@drawable/blue_electirk"
         android:text="צפיה בתורים"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.629"
+        app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintStart_toEndOf="@+id/add_queue"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.879"
@@ -58,20 +59,24 @@
         android:layout_width="160dp"
         android:layout_height="90dp"
         android:layout_marginBottom="76dp"
+        android:background="@drawable/blue_electirk"
         android:text="הוספת תורים"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.149"
+        app:layout_constraintHorizontal_bias="0.063"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/institute_image"
-        app:layout_constraintVertical_bias="0.986"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.987"
+        tools:ignore="MissingConstraints"
+
+        />
 
     <Button
         android:id="@+id/instData"
         android:layout_width="107dp"
         android:layout_height="62dp"
+        android:background="@color/black"
         android:text="איזור אישי"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +84,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.116"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+
+        />
 
     <ImageView
         android:id="@+id/institute_image"
@@ -105,5 +112,5 @@
         app:layout_constraintTop_toBottomOf="@+id/institute_image"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_camera" />
-
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
