--- a/Dimot_Bekalot/app/src/main/res/layout/activity_watching_queue.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_watching_queue.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/pale_blue_background"
+    android:background="@drawable/gray_background"
     tools:context=".InstituteActivity.WatchingQueueActivity">
 
-    <include android:id="@+id/include" layout="@layout/toolbar" />
+    <include android:id="@+id/include" layout="@layout/toolbar_institute" />
 
     <TextView
         android:id="@+id/title"
