--- a/Dimot_Bekalot/app/src/main/res/layout/popup_data_change_institute.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/popup_data_change_institute.xml
@@ -13,25 +13,29 @@
 
     <TextView
         android:text="אנא כתבו כאן את הטקסט אשר תרצו לעדכן;"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_height="match_parent" />
+        android:textStyle="bold"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="20dp"/>
 
     <EditText
         android:id="@+id/input_data_to_change"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="אנא כיתבו כאן"
         android:background="@drawable/bg_calen"
         android:textSize="30dp"/>
 
-        <Button
-            android:id="@+id/yes_update"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:text="עדכן"
-            android:textSize="25dp"/>
+    <Button
+        android:id="@+id/yes_update"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="עדכן"
+        android:textSize="25dp"/>
 
 
 </LinearLayout>
