--- a/Dimot_Bekalot/app/src/main/res/layout/popup_password_change_institute.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/popup_password_change_institute.xml
@@ -3,25 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginLeft="70dp"
     android:layout_marginTop="250dp"
-    android:layout_marginRight="70dp"
-    android:background="@color/white">
+    android:layout_marginRight="70dp">
+<!--    android:background="@color/white">-->
 
     <TextView
         android:text="אנא כתבו כאן את הקוד אשר תרצו לעדכן;"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:textStyle="bold"
-         />
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="20dp"/>
 
     <EditText
         android:id="@+id/password1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="הקוד החדש"
         android:background="@drawable/bg_calen"
@@ -29,7 +33,7 @@
 
     <EditText
         android:id="@+id/password2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="אנא כיתבו אותו שוב"
         android:background="@drawable/bg_calen"
