--- a/Dimot_Bekalot/app/src/main/res/layout/activity_institute_main.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_institute_main.xml
@@ -43,40 +43,35 @@
         android:id="@+id/watch_queue"
         android:layout_width="160dp"
         android:layout_height="90dp"
-        android:background="@drawable/blue_electirk"
         android:text="צפיה בתורים"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.733"
+        app:layout_constraintHorizontal_bias="0.777"
         app:layout_constraintStart_toEndOf="@+id/add_queue"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.879"
+        app:layout_constraintVertical_bias="0.881"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/add_queue"
         android:layout_width="160dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="76dp"
-        android:background="@drawable/blue_electirk"
         android:text="הוספת תורים"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/institute_image"
-        app:layout_constraintVertical_bias="0.987"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.881"
 
-        />
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/instData"
         android:layout_width="107dp"
         android:layout_height="62dp"
-        android:background="@color/black"
         android:text="איזור אישי"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,5 +107,6 @@
         app:layout_constraintTop_toBottomOf="@+id/institute_image"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_camera" />
-    
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
