--- a/Dimot_Bekalot/app/src/main/res/layout/activity_patient_register.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_patient_register.xml
@@ -7,6 +7,10 @@
     android:background="@drawable/pale_blue_background"
     tools:context=".entryActivities.Register_Patient_Activity">
 
+    <include
+        android:id="@+id/include5"
+        layout="@layout/toolbar_entry_activities" />
+
     <EditText
         android:id="@+id/user_ID_input_register_patient"
         android:layout_width="170dp"
@@ -109,10 +113,6 @@
         app:layout_constraintEnd_toEndOf="@+id/user_living_city_input_register_patient"
         app:layout_constraintStart_toStartOf="@+id/user_living_city_input_register_patient"
         app:layout_constraintTop_toTopOf="@+id/user_living_city_input_register_patient" />
-
-    <include
-        android:id="@+id/include2"
-        layout="@layout/toolbar" />
 
     <TextView
         android:id="@+id/welcome_text_view_patient"
