--- a/Dimot_Bekalot/app/src/main/res/layout/activity_watching_queue.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_watching_queue.xml
@@ -46,6 +46,7 @@
 
         <CalendarView
             android:id="@+id/calendar"
+            android:background="@color/White"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
