--- a/Dimot_Bekalot/app/src/main/res/layout/activity_institute_data.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_institute_data.xml
@@ -22,7 +22,7 @@
     </TextView>
 
     <TableLayout
-        android:background="@color/white"
+        android:background="@color/White"
         android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
