--- a/Dimot_Bekalot/app/src/main/res/layout/activity_institute_main.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/activity_institute_main.xml
@@ -45,6 +45,7 @@
         android:layout_height="90dp"
         android:text="צפיה בתורים"
         android:textSize="25sp"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.777"
@@ -59,6 +60,7 @@
         android:layout_height="90dp"
         android:text="הוספת תורים"
         android:textSize="25sp"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.075"
@@ -73,6 +75,7 @@
         android:layout_width="107dp"
         android:layout_height="62dp"
         android:text="איזור אישי"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.052"
