--- a/Dimot_Bekalot/app/src/main/res/layout/popup_data_change_institute.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/popup_data_change_institute.xml
@@ -9,7 +9,7 @@
     android:layout_marginLeft="70dp"
     android:layout_marginTop="250dp"
     android:layout_marginRight="70dp"
-    android:background="@color/white">
+    android:background="@color/White">
 
     <TextView
         android:text="אנא כתבו כאן את הטקסט אשר תרצו לעדכן;"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="אנא כיתבו כאן"
-        android:background="@drawable/bg_calen"
+        android:background="@color/White"
         android:textSize="30dp"/>
 
     <Button
@@ -35,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:text="עדכן"
+        android:textColor="@color/White"
         android:textSize="25dp"/>
 
 
