--- a/Dimot_Bekalot/app/src/main/res/layout/popup_password_change_institute.xml
+++ b/Dimot_Bekalot/app/src/main/res/layout/popup_password_change_institute.xml
@@ -8,8 +8,8 @@
     android:orientation="vertical"
     android:layout_marginLeft="70dp"
     android:layout_marginTop="250dp"
-    android:layout_marginRight="70dp">
-<!--    android:background="@color/white">-->
+    android:layout_marginRight="70dp"
+    android:background="@color/White">
 
     <TextView
         android:text="אנא כתבו כאן את הקוד אשר תרצו לעדכן;"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="הקוד החדש"
-        android:background="@drawable/bg_calen"
+        android:background="@color/White"
         android:textSize="30dp"/>
 
     <EditText
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="אנא כיתבו אותו שוב"
-        android:background="@drawable/bg_calen"
+        android:background="@color/White"
         android:textSize="20dp"/>
 
     <Button
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:text="עדכן"
+        android:textColor="@color/White"
         android:textSize="25dp"/>
 
 </LinearLayout>
